--- a/lab_02/отчёт/13-research.tex
+++ b/lab_02/отчёт/13-research.tex
@@ -2,7 +2,7 @@
 \section{Исследовательская часть}
 
 \hspace{1.25cm}
-Для сравнения времени реализаций стандартного алгоритма, алгоритма Винограда и его оптимизированной версии программа была запущена на рандомно сгенерированных квадратных матрицах из целых чисел от -10 до 10 на чётных размерностях от 50 до 250 с шагом 50 (рисунок~\ref{fig:graph_even} и таблица~\ref{table:table_even}) и на нечётных размерностях от 51 до 251 с шагом 50 (график~\ref{fig:graph_odd} и таблица~\ref{table:table_odd}) (так как при нечётной размерности в алгоритме Винограда добавляется цикл) по 50 замеров каждая матрица, среднее значение было вынесено в таблицу и для наглядности изображено на графике.
+Для сравнения времени реализаций стандартного алгоритма, алгоритма Винограда и его оптимизированной версии программа была запущена на рандомно сгенерированных квадратных матрицах из целых чисел от -10 до 10 на чётных размерностях от 50 до 250 с шагом 50 (рисунок~\ref{fig:graph_even} и таблица~\ref{table:table_even}) и на нечётных размерностях от 51 до 251 с шагом 50 (график~\ref{fig:graph_odd} и таблица~\ref{table:table_odd}) (так как при нечётной размерности в алгоритме Винограда и его оптимизированной версии добавляется цикл) по 50 замеров каждая матрица, среднее значение было вынесено в таблицу и для наглядности изображено на графике.
 
 \begin{figure}[H]
     \centering
@@ -51,6 +51,6 @@
 \subsection*{Вывод}
 
 \hspace{1.25cm}
-По проведённым исследованиям была выявлена большая скорость работы алгоритма Винограда над стандартным алгоритмом за счёт уменьшения трудоёмкости вычислений и чем больше размерность матрицы, тем больше видна разница в скорости алгоритмов. Однако на нечётных размерностях такого выигрыша не наблюдается за счёт дополнительного цикла, корректирующего вычисленное значение в алгоритме Винограда.
+По проведённым исследованиям была выявлена большая скорость работы алгоритма Винограда над стандартным алгоритмом за счёт уменьшения трудоёмкости вычислений и чем больше размерность матрицы, тем больше видна разница в скорости алгоритмов. Однако на нечётных размерностях такого выигрыша не наблюдается за счёт дополнительного цикла, корректирующего вычисленное значение в алгоритме Винограда. Быстрее алгоритма Винограда работает его оптимизированная версия за счёт двоичного сдвига вместо умножения на 2, объединения III и IV частей алгоритма Винограда, выноса начальной итерации из каждого внешнего цикла, что уменьшает трудоёмкость.
 
 \newpage
