--- a/lab_02/отчёт/12-technologic.tex
+++ b/lab_02/отчёт/12-technologic.tex
@@ -14,7 +14,7 @@ Python имеет простой и понятный синтаксис, что 
 \subsection{Реализации алгоритмов}
 
 \hspace{1.25cm}
-Ниже приведены реализации алгоритмов умножения матриц стандартным способом (листинг \ref{lst:standart}) и алгоритмом Винограда (листинг \ref{lst:Vinograd}) на Python.
+Ниже приведены реализации алгоритмов умножения матриц стандартным способом (листинг \ref{lst:standart}), алгоритмом Винограда (листинг \ref{lst:Vinograd}) и оптимизированным алгоритмом Винограда (листинг \ref{lst:Vinograd_better}) на Python.
 
 \vspace{0.25cm}
 \begin{lstlisting}[caption=реализация стандартного алгоритма умножения матриц, label=lst:standart]
@@ -69,10 +69,49 @@ def algo_matrix_mult_Vinograd(A: List[List[int]], B: List[List[int]]) -> Tuple[L
 \end{lstlisting}
 
 \vspace{0.25cm}
+\begin{lstlisting}[caption=реализация оптимизированного алгоритма Винограда умножения матриц, label=lst:Vinograd_better]
+def algo_matrix_mult_Vinograd_better(A: List[List[int]], B: List[List[int]]) -> Tuple[List[List[int]], bool]:
+    rows1, cols1 = len(A), len(A[0])
+    rows2, cols2 = len(B), len(B[0])
+    C = [[0 for _ in range(cols2)] for _ in range(rows1)]
+    if (cols1 != rows2):
+        err_code = ERROR
+    else:
+        max_k = int(cols1 / 2)
+        # filling the array MulH
+        MulH = [0 for _ in range(rows1)]
+        for i in range(rows1):
+            if max_k != 0:
+                MulH[i] = A[i][0] * A[i][1]
+            for k in range(1, max_k):
+                MulH[i] = MulH[i] + A[i][k << 1] * A[i][(k << 1) + 1]
+        # filling the array MulV
+        MulV = [0 for _ in range(cols2)]
+        for j in range(cols2):
+            if max_k != 0:
+                MulV[j] = B[0][j] * B[1][j]
+            for k in range(1, max_k):
+                MulV[j] = MulV[j] + B[k << 1][j] * B[(k << 1) + 1][j]
+        # filling in the matrix C itself
+        for i in range(rows1):
+            for j in range(cols2):
+                C[i][j] = - MulH[i] - MulV[j]
+                if cols1 != 1:
+                    C[i][j] = C[i][j] + (A[i][0] + B[1][j]) * (A[i][1] + B[0][j])
+                # if cols1 is odd (correction)
+                if cols1 % 2 == 1:
+                    C[i][j] = C[i][j] +  A[i][cols1-1] * B[cols1-1][j]
+                for k in range(1, max_k):
+                    C[i][j] = C[i][j] + (A[i][k << 1] + B[(k << 1) + 1][j]) * (A[i][(k << 1) + 1] + B[k << 1][j])
+        err_code = OK
+    return C, err_code
+\end{lstlisting}
+
+\vspace{0.25cm}
 \subsection{Тесты}
 
 \hspace{1.25cm}
-Для тестирования стандартного и Винограда алгоритмов умножения матриц были составлены таблицы с входными данными (2 матрицы), ожидаемым результатом (матрицей --- произведением входных) и полученным результатом от всех способов.
+Для тестирования всех алгоритмов умножения матриц были составлены тесты с входными данными (2 матрицы), ожидаемым результатом (матрицей --- произведением входных) и полученным результатом от всех способов (см таблицу \ref{table:tests}).
 
 \vspace{0.25cm}
 \begin{table}[H]
@@ -93,6 +132,7 @@ def algo_matrix_mult_Vinograd(A: List[List[int]], B: List[List[int]]) -> Tuple[L
         \hline
     \end{tabular}
     \caption{Таблица тестов для алгоритмов умножения матриц}
+    \label{table:tests}
 \end{table}
 
 В ходе проведённого тестирования (с помощью pytest) ошибок в алгоритмах не выявлено:
