--- a/lab_02/отчёт/14-conclusion.tex
+++ b/lab_02/отчёт/14-conclusion.tex
@@ -27,6 +27,6 @@
 
 Были разработаны тесты для всех алгоритмов, учитывающие крайние случаи, ожидаемых результатов которых достигли все реализации.
 
-Сравнения полученных программ показали, что алгоритм Винограда работает быстрее стандартного алгоритма умножения матриц за счёт уменьшения трудоёмности вычислений. Однако на нечётных размерностях он считается медленнее за счёт корректировки вычисленного значения в дополнительном цикле.
+Сравнения полученных программ показали, что алгоритм Винограда работает быстрее стандартного алгоритма умножения матриц за счёт уменьшения трудоёмности вычислений. Однако на нечётных размерностях он считается медленнее за счёт корректировки вычисленного значения в дополнительном цикле. Третий алгоритм работает быстрее алгоритма Винограда за счёт оптимизаций по варианту.
 
 \newpage
