check lab_03 report and add makefile

--- a/lab_02/отчёт/03-intro.tex
+++ b/lab_02/отчёт/03-intro.tex
@@ -5,7 +5,7 @@
 \end{center}
 \addcontentsline{toc}{section}{Введение} % Добавляем в оглавление
 
-Цель работы: рассмотреть различные алгоритмы умножения матриц (стандартный алгоритм, алгоритм Винограда и его оптимизированная версия). Также будет изучена оценка сложности алгоритмов и получены навыки по их улучшению.
+Цель работы: исследовать различные алгоритмы умножения матриц (стандартный алгоритм, алгоритм Винограда и его оптимизированная версия). Также будет изучена оценка сложности алгоритмов и получены навыки по их улучшению.
 
 \vspace{0.25cm}
 Для достижения этой цели были поставлены следующие задачи:
