--- a/lab_02/отчёт/10-analitic.tex
+++ b/lab_02/отчёт/10-analitic.tex
@@ -4,9 +4,7 @@
 \subsection{Базовые понятия матриц}
 
 \hspace{1.25cm}
-\begin{definition}
-
-    \textit{Матрицей $A$ размеров $m \times n$ называется совокупность $m \times n$ элементов из некоторого поля, расположенных в виде таблицы из $m$ строк и $n$ столбцов:}
+\textit{Матрицей $A$ размеров $m \times n$ называется совокупность $m \times n$ элементов из некоторого поля, расположенных в виде таблицы из $m$ строк и $n$ столбцов:}
     \[
     A = 
     \begin{pmatrix}
@@ -17,12 +15,9 @@
     \end{pmatrix} = (a_{ij})_{m \times n},
     \]
     \textit{где $a_{ij}$ ($i = 1, 2, \dots, m$; $j = 1, 2, \dots, n$) — элементы матрицы, а $i$ указывает номер строки, а $j$ — номер столбца.}
-\end{definition}
 
-\begin{definition}
     \textit{Матрица называется квадратной, если $m = n$, и число $n$ называется порядком матрицы.}
 При этом число $n$ называется порядком матрицы.
-\end{definition}
 
 У квадратной матрицы можно выделить главную и побочную диагонали:
 \begin{itemize}
@@ -30,28 +25,23 @@
     \item Побочная диагональ: $a_{n1}, a_{(n-1)2}, \dots, a_{1n}$.
 \end{itemize}
 
-\begin{definition}
 Суммой $A + B$ двух матриц $A = (a_{ij})_{m \times n}$ и $B = (b_{ij})_{m \times n}$ называется матрица $C = (c_{ij})_{m \times n}$, где $c_{ij} = a_{ij} + b_{ij}$.
-\end{definition}
 
-\begin{definition}
 Произведением $\lambda \cdot A$ матрицы $A = (a_{ij})_{m \times n}$ на число $\lambda$ называется матрица $C = (c_{ij})_{m \times n}$, где $c_{ij} = \lambda \cdot a_{ij}$. \cite{nikitenko}
-\end{definition}
 
 \subsection{Умножение матриц}
 
-\begin{definition}
+\hspace{1.25cm}
 Произведением $A \cdot B$ матрицы $A = (a_{ij})_{m \times n}$ на матрицу $B = (b_{ij})_{n \times p}$ называется матрица $C = (c_{ij})_{m \times p}$, где
 \[
 c_{ij} = a_{i1}b_{1j} + a_{i2}b_{2j} + \dots + a_{in}b_{nj} = \sum_{k=1}^{n} a_{ik}b_{kj}.
 \]
-\end{definition}
 
 Элемент $c_{ij}$ равен сумме попарных произведений соответствующих элементов $i$-й строки матрицы $A$ и $j$-го столбца матрицы $B$.
 
-\noindent Замечание. Перемножать можно только те матрицы, у которых число столбцов первой матрицы равно числу строк второй.
+Замечание. Перемножать можно только те матрицы, у которых число столбцов первой матрицы равно числу строк второй.
 
-\noindent Свойства умножения матриц:
+Свойства умножения матриц:
 \begin{align*}
 1) \ & \text{Не является коммутативным: } A \cdot B \neq B \cdot A \text{ в общем случае}; \\
 2) \ & \text{Ассоциативность: } (A \cdot B) \cdot C = A \cdot (B \cdot C); \\
@@ -79,26 +69,6 @@ V \cdot W = (v_1 + w_2)(v_2 + w_1) + (v_3 + w_4)(v_4 + w_3) - v_1 v_2 - v_3 v_4 
 Эквивалентность двух выражений можно легко проверить. Кажется, что второе выражение задает больше работы, чем первое: вместо четырёх умножений мы видим шесть, а вместо трёх сложений — десять. Менее очевидно, что правое выражение допускает предварительную обработку: его части можно вычислить заранее и сохранить для каждой строки первой матрицы и для каждого столбца второй.
 
 На практике это означает, что после предварительной обработки остаётся выполнить два умножения и семь сложений.
-\cite{algolib}
-
-\subsection{Анализ алгоритма Винограда}
-
-\hspace{1.25cm}
-Рассмотрим случай с чётной общей размерностью $b$. Результаты подсчета сложений и умножений сведены в таблицу~\ref{table:analis_Vinigrad}.
-
-\begin{table}[H]
-\centering
-\caption{Анализ сложности алгоритма Винограда}
-\begin{tabular}{|c|c|c|}
-\hline
-Этап & Умножения & Сложения \\ \hline
-Предварительная обработка матрицы $G$ & $a d$ & $a (d - 1)$ \\ \hline
-Предварительная обработка матрицы $H$ & $c d$ & $c (d - 1)$ \\ \hline
-Вычисление матрицы $R$ & $a c d$ & $a c (2d + d + 1)$ \\ \hline
-Всего & $\frac{abc + ab + bc}{2}$ & $\frac{a(b - 2) + c(b - 2) + ac(3b + 2)}{2}$ \\ \hline
-\end{tabular}
-\label{table:analis_Vinigrad}
-\end{table}
 \cite{algolib}
 
 \newpage
