--- a/lab_02/отчёт/11-consrtact.tex
+++ b/lab_02/отчёт/11-consrtact.tex
@@ -3,11 +3,13 @@
 \subsection{Описания алгоритмов}
 
 \hspace{1.25cm}
-На основании теоретических измышлений были разработаны алгоритмы, вычисляющие произведение матриц тремя способами: стандартным, Винограда и оптимизированным Винограда. Блок-схемы этих алгоритмов приведены на рисунках \ref{fig:block_1_1} и \ref{fig:block_1_2} (стандартный), рисунках \ref{fig:block_2_1}, \ref{fig:block_2_2} и \ref{fig:block_2_3} (Винограда) и рисунках \ref{fig:block_3_1}, \ref{fig:block_3_2} и \ref{fig:block_3_3} (оптимизированный Винограда). Вариант оптимизации: двоичный сдвиг вместо умножения на 2; объединение III и IV частей алгоритма Винограда; вынос начальной итерации из каждого внешнего цикла.
+На основании теоретических измышлений были разработаны алгоритмы, вычисляющие произведение матриц тремя способами: стандартным, Винограда и оптимизированным Винограда. Блок-схемы этих алгоритмов приведены на рисунках \ref{fig:block_1_1} и \ref{fig:block_1_2} (стандартный), рисунках \ref{fig:block_2_1}, \ref{fig:block_2_2} и \ref{fig:block_2_3} (Винограда) и рисунках \ref{fig:block_3_1}, \ref{fig:block_3_2} и \ref{fig:block_3_3} (оптимизированный Винограда).
+
+Вариант оптимизации: двоичный сдвиг вместо умножения на 2; объединение III и IV частей алгоритма Винограда; вынос начальной итерации из каждого внешнего цикла.
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=1\textwidth]{img/block_1_1.png}
+    \includegraphics[width=0.9\textwidth]{img/block_1_1.png}
     \caption{Блок-схема стандартного алгоритма умножения матриц}
     \label{fig:block_1_1}
 \end{figure}
@@ -15,7 +17,7 @@
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.9\textwidth]{img/block_1_2.png}
+    \includegraphics[width=0.8\textwidth]{img/block_1_2.png}
     \caption{Блок-схема стандартного алгоритма умножения матриц (продолжение)}
     \label{fig:block_1_2}
 \end{figure}
@@ -326,5 +328,10 @@ f_{\text{Виноград}} = 2 + 2 - 10 \cdot M + 15/2 \cdot MN +
       14 \cdot MQ & \text{х.c.(cols1 \vdots 2)}.
     \end{cases}
 \end{multline}
+
+\subsection*{Вывод}
+
+\hspace{1.25cm}
+На основании теоретических измышлений были разработаны алгоритмы, вычисляющие произведение матриц тремя способами (стандартным, Винограда и оптимизированным Винограда), составлены блок-схемы этих алгоритмов. Была введена модель вычислений и рассчитаны трудоёмкости трёх алгоритмов умножения матриц.По полученным формулам можно сделать вывод, что алгоритм Винограда менее трудоёмок чем стандартный алгоритм умножения матриц, за счёт уменьшения числа умножений и вычисленных заранее значений, которые могут использоваться повторно. Благодаря оптимизациям по варианту третий алгоритм выгоднее по вычислительной сложности, чем алгоритм Винограда.
 
 \newpage
