--- a/lab_02/отчёт/12-technologic.tex
+++ b/lab_02/отчёт/12-technologic.tex
@@ -1,7 +1,7 @@
 \section{Технологическая часть}
 \subsection{Требования к программному обеспечению}
 
-\hspace{1.20cm}
+\hspace{1.15cm}
 На вход программе подаются 2 матрицы из целых чисел.
 
 На выход программа выдаёт матрицу --- произведение входных данных и код ошибки (на случай невозможности перемножить матрицы, если количество столбцов в первой не равно числу строк во второй). Также в зависимости от выбранного пункта меню программа замеряет время работы алгоритмов и рисует получившиеся графики.
@@ -9,7 +9,7 @@
 \subsection{Средства реализации}
 
 \hspace{1.25cm}
-Python имеет простой и понятный синтаксис, что облегчает кодирование алгоритмов и их тестирование, поэтому программа была реализована на этом языке программирования. Для замеров времени была использована функция \texttt{process\_time()} из библиотеки \texttt{time}, вычисляющая процессорное время \cite{process_time}.
+В связи с опытом реализации подобных задач на Python, программа была реализована на этом языке программирования. Для замеров времени была использована функция \texttt{process\_time()} из библиотеки \texttt{time}, вычисляющая процессорное время \cite{process_time}.
 
 \subsection{Реализации алгоритмов}
 
@@ -116,6 +116,7 @@ def algo_matrix_mult_Vinograd_better(A: List[List[int]], B: List[List[int]]) -> 
 \vspace{0.25cm}
 \begin{table}[H]
     \centering
+    \caption{Таблица тестов для алгоритмов умножения матриц}
     \renewcommand{\arraystretch}{1.5} % Увеличивает расстояние между строками
     \begin{tabular}{|c|c|c|c|c|}
         \hline
@@ -131,11 +132,10 @@ def algo_matrix_mult_Vinograd_better(A: List[List[int]], B: List[List[int]]) -> 
         $\left( \begin{matrix} 1 & 2 \\ 3 & 4 \\ 5 & 6 \end{matrix} \right)$ & $\left( \begin{matrix} -1 & 3 & 1 \\ 7 & 2 & 0 \end{matrix} \right)$ & $\left( \begin{matrix} 13 & 7 & 1 \\ 25 & 17 & 3 \\ 37 & 27 & 5 \end{matrix} \right)$ & OK & $\left( \begin{matrix} 13 & 7 & 1 \\ 25 & 17 & 3 \\ 37 & 27 & 5 \end{matrix} \right)$ \\
         \hline
     \end{tabular}
-    \caption{Таблица тестов для алгоритмов умножения матриц}
     \label{table:tests}
 \end{table}
 
-В ходе проведённого тестирования (с помощью pytest) ошибок в алгоритмах не выявлено:
+В ходе проведённого тестирования (с помощью pytest) ошибок в алгоритмах не выявлено (см листинг \ref{lst:pytest}).
 
 \vspace{0.25cm}
 \begin{lstlisting}[caption=тестирование алгоритмов с помощью pytest]
@@ -150,5 +150,6 @@ test_algo.py .....................................             [100%]
 
 ======================== 24 passed in 0.47s =========================
 \end{lstlisting}
+\label{lst:pytest}
 
 \newpage
