--- a/lab_02/отчёт/13-research.tex
+++ b/lab_02/отчёт/13-research.tex
@@ -4,6 +4,9 @@
 \hspace{1.25cm}
 Для сравнения времени реализаций стандартного алгоритма, алгоритма Винограда и его оптимизированной версии программа была запущена на рандомно сгенерированных квадратных матрицах из целых чисел от -10 до 10 на чётных размерностях от 50 до 250 с шагом 50 (рисунок~\ref{fig:graph_even} и таблица~\ref{table:table_even}) и на нечётных размерностях от 51 до 251 с шагом 50 (график~\ref{fig:graph_odd} и таблица~\ref{table:table_odd}) (так как при нечётной размерности в алгоритме Винограда и его оптимизированной версии добавляется цикл) по 50 замеров каждая матрица, среднее значение было вынесено в таблицу и для наглядности изображено на графике.
 
+Замеры были проведены на процессоре 13-го поколения Intel(R) Core(TM) i5-13500H с тактовой частотой 2.60 ГГц, оперативная память 16,0 ГБ,
+тип системы	64-разрядная операционная система, процессор x64, версия Python 3.11.9.
+
 \begin{figure}[H]
     \centering
     \includegraphics[width=1\textwidth]{img/graph_even.png}
@@ -13,6 +16,7 @@
 
 \begin{table}[H]
     \centering
+    \caption{Таблица времени (сек) работы алгоритмов в зависимости от чётных размерностей матриц}
     \begin{tabular}{|l|c|c|c|c|c|}
         \hline
         \textbf{Алгоритм} & \textbf{50} & \textbf{100} & \textbf{150} & \textbf{200} & \textbf{250}\\
@@ -22,7 +26,6 @@
         Винограда (оптимизированный) & 0.016 & 0.12 & 0.45 & 0.96 & 1.7 \\
         \hline
     \end{tabular}
-    \caption{Таблица времени (сек) работы алгоритмов в зависимости от чётных размерностей матриц}
     \label{table:table_even}
 \end{table}
 
@@ -35,6 +38,7 @@
 
 \begin{table}[H]
     \centering
+    \caption{Таблица времени (сек) работы алгоритмов в зависимости от нечётных размерностей матриц}
     \begin{tabular}{|l|c|c|c|c|c|}
         \hline
         \textbf{Алгоритм} & \textbf{51} & \textbf{101} & \textbf{151} & \textbf{201} & \textbf{251}\\
@@ -44,7 +48,6 @@
         Винограда (оптимизированный) & 0.01 & 0.048 & 0.24 & 0.74 & 0.99 \\
         \hline
     \end{tabular}
-    \caption{Таблица времени (сек) работы алгоритмов в зависимости от нечётных размерностей матриц}
     \label{table:table_odd}
 \end{table}
 
