--- a/lab_02/отчёт/14-conclusion.tex
+++ b/lab_02/отчёт/14-conclusion.tex
@@ -4,7 +4,7 @@
 \end{center}
 \addcontentsline{toc}{section}{Заключение} % Добавляем в оглавление
 
-В результате выполнения лабораторной работы были рассмотрены различные алгоритмы умножения матриц (стандартный алгоритм, алгоритм Винограда и его оптимизированная версия). Также была изучена оценка сложности алгоритмов и получены навыки по их улучшению.
+В результате выполнения лабораторной работы были исследованы различные алгоритмы умножения матриц (стандартный алгоритм, алгоритм Винограда и его оптимизированная версия). Также была изучена оценка сложности алгоритмов и получены навыки по их улучшению.
 
 \vspace{0.25cm}
 В частности:
