--- a/lab_03/lab_3/doc/03-intro.tex
+++ b/lab_03/lab_3/doc/03-intro.tex
@@ -5,7 +5,7 @@
 \end{center}
 \addcontentsline{toc}{section}{Введение} % Добавляем в оглавление
 
-Цель работы: рассмотреть различные алгоритмы поска элемента в массиве (линейный и бинарный алгоритмы).
+Цель работы: исследовать различные алгоритмы поска элемента в массиве (линейный и бинарный алгоритмы).
 
 \vspace{0.25cm}
 Для достижения этой цели были поставлены следующие задачи:
@@ -18,7 +18,7 @@
 
 \item реализовать оба алгоритма поиска элемента в массиве на выбранном языке программирования;
 
-\item сравнить эффективность этих алгоритмов на практике.
+\item сравнить эффективность этих алгоритмов по числу сравнений до нахождения искомого элемента на практике.
 
 \end{itemize}
 
