--- a/lab_03/lab_3/doc/10-analitic.tex
+++ b/lab_03/lab_3/doc/10-analitic.tex
@@ -4,7 +4,7 @@
 \subsection{Алгоритм линейного поиска}
 
 \hspace{1.25cm}
-Линейный поиск - это метод поиска элемента в коллекции элементов. При линейном поиске каждый элемент коллекции просматривается последовательно один за другим, чтобы найти нужный элемент. Линейный поиск также известен как последовательный поиск.
+Линейный поиск --- это метод поиска элемента в коллекции элементов. При линейном поиске каждый элемент коллекции просматривается последовательно один за другим, чтобы найти нужный элемент. Линейный поиск также известен как последовательный поиск.
 
 Алгоритм линейного поиска можно разбить на следующие этапы:
 \begin{itemize}
@@ -176,13 +176,13 @@
 
 \item Сортировка слиянием (Merge Sort):
 
-Алгоритм типа "разделяй и властвуй", который разбивает список на две части, сортирует их и затем объединяет.
+Алгоритм типа "разделяй и властвуй"\,, который разбивает список на две части, сортирует их и затем объединяет.
 
 Время выполнения: \(O(n * \log n)\) во всех случаях.
 
 \item Быстрая сортировка (Quick Sort):
 
-Также алгоритм "разделяй и властвуй", который выбирает опорный элемент, распределяет элементы по сравнению с опорным и рекурсивно сортирует подсписки.
+Также алгоритм "разделяй и властвуй"\,, который выбирает опорный элемент, распределяет элементы по сравнению с опорным и рекурсивно сортирует подсписки.
 
 Время выполнения:
 \begin{itemize}
