--- a/lab_03/lab_3/doc/13-research.tex
+++ b/lab_03/lab_3/doc/13-research.tex
@@ -4,6 +4,10 @@
 \hspace{1.25cm}
 Для рассмотрения числа сравнений в зависимости от индекса на котором находится элемент для линейного и бинарного поисков элементов в массиве были собранны данные и составлены следующие гистограммы: для линейного поиска (см. рисунок~\ref{fig:bar_graph_linear}), для бинарного (см. рисунок~\ref{fig:bar_graph_binary}) и отсортированный по возрастанию числа сравнений для бинарного (см. рисунок~\ref{fig:bar_graph_binary_sort}). Алгоритмы запускались на массиве длиной 50, элементы которого соответствуют индексам и ищутся один за другим с шагом 1.
 
+Замеры были проведены на процессоре 13-го поколения Intel(R) Core(TM) i5-
+13500H с тактовой частотой 2.60 ГГц, оперативная память 16,0 ГБ, тип системы 64-
+разрядная операционная система, процессор x64, версия Python 3.11.9.
+
 \begin{figure}[H]
     \centering
     \includegraphics[width=1\textwidth]{img/bar_graph_linear.png}
@@ -45,9 +49,9 @@
 \hspace{1.25cm}
 При бинарном поиске массив делится на две части, и продолжается поиск в соответствующей половине, в зависимости от того, меньше или больше искомое значение среднего элемента. Число сравнений можно оценить как логарифм числа элементов массива:
 
-\[
+\begin{equation}
 \text{Число сравнений} \approx \log_2(n)
-\]
+\end{equation}
 
 где \(n\) — текущее количество элементов в части массива, где продолжается поиск.
 
