--- a/lab_03/lab_3/doc/14-conclusion.tex
+++ b/lab_03/lab_3/doc/14-conclusion.tex
@@ -4,7 +4,7 @@
 \end{center}
 \addcontentsline{toc}{section}{Заключение} % Добавляем в оглавление
 
-В результате выполнения лабораторной работы были рассмотрены различные алгоритмы поска элемента в массиве (линейный и бинарный алгоритмы).
+В результате выполнения лабораторной работы были исследованы различные алгоритмы поска элемента в массиве (линейный и бинарный алгоритмы).
 
 \vspace{0.25cm}
 В частности:
